--- a/lib/bubblePopper.css
+++ b/lib/bubblePopper.css
@@ -31,7 +31,7 @@ h2 {
   flex-direction: row;
   align-items: center;
   height: 100%;
-  width: 600px;
+  width: 100%;
   justify-content: space-around;
 }
 
